--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,5 +1,6 @@
-Hi,
 
 Welcome to the Still Have Them! Click on the link below to activate your account:
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
+
+This is an automatically generated e-mail, please do not reply to it.
