--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -1397,8 +1397,19 @@ div.menu-shadow {
 }
 
 // Search Type Warning
+
 span#srch-type {
     color: #999999;
     background: #3e3e3e;
     border-color: #898989;
+}
+
+// Check Your Email
+
+.auth {
+    color: #ccc;
+}
+
+.auth-icon {
+    color: #b7b7b7;
 }
