Add resend activation link feature.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1640,3 +1640,12 @@ span#srch-type {
 .sign-in {
     min-width: 108px;
 }
+
+.resend {
+    padding-left: 5px;
+    text-transform: initial;
+    color: #999;
+    &:hover {
+        color: #666;
+    }
+}
