--- a/app/views/shared/_auth_needed.js.erb
+++ b/app/views/shared/_auth_needed.js.erb
@@ -1,4 +1,4 @@
-$modal = $('#signup-modal');
+$modal = $('<%= selector %>');
 $header = $modal.find('.modal-header');
 $content = $modal.find('.modal-content');
 $header.hide();
