Turn off puma. Change behavior of update info inside settings (changing email/password).

--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -1405,11 +1405,10 @@ span#srch-type {
 }
 
 // Check Your Email
-
-.auth {
-    color: #ccc;
-}
-
 .auth-icon {
     color: #b7b7b7;
+}
+
+.auth, .resend:hover {
+    color: #ccc;
 }
