--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -249,6 +249,7 @@ table.set-email-pass {
     padding: 5px 15px 5px 10px;
     border-radius: 5px;
     background: #dedede;
+    border: thin dashed #afafaf;
 }
 
 .export-btns {
