Deactivate account and resend activation link after changing email address. Switch server back to puma.

--- a/app/views/user_mailer/email_confirmation.text.erb
+++ b/app/views/user_mailer/email_confirmation.text.erb
@@ -1,4 +1,4 @@
-Welcome to the Still Have Them! Click on the link below to activate your account:
+You've changed your email! Click on the link below to confirm your new email:
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
 
