Change domain in mailer settings. Change sample collection link.

--- a/app/views/static_pages/_not_logged.html.erb
+++ b/app/views/static_pages/_not_logged.html.erb
@@ -28,7 +28,7 @@
   </div>
 
   <div>
-  <%= link_to 'http://localhost:3000/shared/Htv1mh2ez-NbC13a6egYLgM6Aes', class: 'uk-button lp-button lp-sample lp-big', target: '_blank' do %>
+  <%= link_to root_url + '/shared/sample_collection', class: 'uk-button lp-button lp-sample lp-big', target: '_blank' do %>
     <span><%= svg 'shelf28' %></span>
     View a sample collection
   <% end %>
