--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -14,7 +14,7 @@
       }
 
       .mail-content {
-          background: #fff !important;
+          background: #fff;
           width: 500px;
           margin: 20px auto;
           margin-bottom: 15px;
