--- a/app/views/users/_access_settings.html.erb
+++ b/app/views/users/_access_settings.html.erb
@@ -4,6 +4,7 @@
   <div class="uk-position-relative uk-margin">
     <%= f.password_field :password, id: 'enter-password', class: 'uk-input share-input', placeholder: 'Enter password' %>
     <%= content_tag :span, svg('key'), id: 'password-icon', class: 'set-input-icon' %>
+    <%= content_tag :span, nil, class: 'warning-icon blink_me set-warning' %>
   </div>
   <%= submit_tag 'Confirm', class: 'uk-button sh-button uk-width-1-1' %>
 <% end %>
