--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
 'uk-toggle': 'target: #f-modal', 'uk-icon': 'social',
 'uk-tooltip' => 'title: Share; pos: left' %>
 <%= link_to '', settings_url, id: 'settings', class: 'nav-icon', remote: true,
-'uk-toggle': 'target: #f-modal', 'uk-icon': 'settings',
+'uk-icon': 'settings',
 'uk-tooltip' => 'title: Settings; pos: bottom-right' %>
 <%= link_to '', logout_path, id: 'logout', class: 'nav-icon', method: :delete, 'uk-icon': 'sign-out',
 'uk-tooltip' => 'title: Log Out; pos: bottom-right' %>
