--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -7,7 +7,6 @@
       <span class="opts">
         <%= link_to '', edit_collection_url(collection), remote: true,
          class: 'uk-link m-coll-o', 'uk-icon': 'icon: pencil; ratio: 1.25',
-          "uk-toggle": "target: #coll-modal",
            'uk-tooltip': "title: Edit; pos: top-left" %>
         <%= link_to '', del_form_url(name: collection.name, id: collection.id), remote: true,
          class: 'uk-link m-coll-o', 'uk-icon': 'icon: trash; ratio: 1.25',
@@ -16,6 +15,6 @@
       </span>
     </li>
     <% end %>
-    <li><%= link_to '', new_collection_path, id: 'm-add-coll', remote: true, "uk-toggle": "target: #coll-modal", class: 'm-add', 'uk-icon': 'plus' %></li>
+    <li><%= link_to '', new_collection_path, id: 'm-add-coll', remote: true, class: 'm-add', 'uk-icon': 'plus' %></li>
   </ul>
 </div>
