--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -63,6 +63,12 @@
           width: 600px;
           text-align: center;
       }
+
+      .small {
+          line-height: 26px;
+          font-style: italic;
+          font-size: 14px;
+      }
     </style>
   </head>
   <body style="background: #ddd;">
