--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,12 @@
-<h1>User#password_reset</h1>
+<p class="welcome">Password reset</p>
+<p>To reset your password click the link below:</p>
+<% link = edit_password_reset_url(@user.reset_token, email: @user.email) %>
+<%= link_to "Reset password", link, class: 'mail-button' %>
+Or follow this link: <%= link_to link, link, class: 'mail-follow' %>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
+<p>This link will expire in two hours.</p>
+
+<p class="small">
+If you did not request your password to be reset, please ignore this email and
+your password will stay as it is.
 </p>
