--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1691,6 +1691,9 @@ span#srch-type {
     border-radius: 5px;
     padding: 20px;
     overflow: auto;
-    width: 360px;
     margin-top: 40px;
+}
+
+.width360{
+    width: 360px;
 }
