Add navigation partial to landing layout.

--- a/app/views/layouts/_landing.html.erb
+++ b/app/views/layouts/_landing.html.erb
@@ -13,6 +13,7 @@
   <body>
     <div id="land-container" class="uk-container uk-container-expand">
       <div id="land-wrap">
+        <%= render 'layouts/land_navigation', theme: theme %>
         <%= yield %>
         <footer class="lp-footer">
           <ul>
