Dark style password reset form and wrong link information.

--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -1412,3 +1412,14 @@ span#srch-type {
 .auth, .resend:hover {
     color: #ccc;
 }
+
+// Password Reset
+
+.reset-hr {
+    border-color: #777;
+}
+
+.password-reset {
+    background-color: #444;
+    color: #ccc;
+}
