--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,3 @@
 <script>
-<% if @home_id %>
-var url = '/collections/<%= @home_id %>';
-<% else %>
-var url = '/search';
-<% end %>
-$.ajax({
-url: url
-}).done(set_offc());
+$.ajax({ url: <%= url %> }).done(set_offc());
 </script>
