--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -29,7 +29,10 @@
         <tr>
         <td class="uk-position-relative">
           <%= f.password_field :password, id: 'change-password', class: 'uk-input set-input password', placeholder: 'New password', autocomplete: 'new-password' %>
-          <button class="uk-button unmask" type="button"></button>
+          <button class="uk-button unmask" type="button">
+            <%= svg 'eye' %>
+            <%= svg 'eye_hidden' %>
+          </button>
           <%= content_tag :span, svg('key'), id: 'password-icon', class: 'set-input-icon'%>
           <%= content_tag :span, nil, class: 'warning-icon blink_me set-warning' %>
         <td class="btn disabled">
