Minor fixes to forms errors.

--- a/app/views/collections/_form.html.erb
+++ b/app/views/collections/_form.html.erb
@@ -3,7 +3,7 @@
 <div class="uk-position-relative margin-bottom-15">
 <%= f.text_field :name, class: 'uk-input coll-field pl40 share-input', placeholder: 'Name', autocomplete: 'off' %>
 <span id='coll-icon-input'><%= svg 'label' %></span>
-<span id="coll-error" class="warning-icon blink_me coll-er" uk-tooltip="title: ; pos: top-left"></span>
+<span id="coll-error" class="warning-icon blink_me coll-er"></span>
 <p id="password-min">max 30 characters</p>
 </div>
 <div class="coll-require">
