--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -712,7 +712,7 @@ li.active:hover .opts {
 // Errors (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - - - //
 .warning-icon {
     pointer-events: all !important;
-    color: #999999;
+    color: #999;
 }
 
 .blink_me {
@@ -1254,6 +1254,9 @@ p.have-account {
 
 .search-warning-icon {
     @extend .warning-icon;
+
+
+    display: none;
 
     position: absolute;
     left: 5px;
