--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -1,14 +1,8 @@
-$("#search-errors").replaceWith("<%= j(render partial: 'search_errors', locals: { errors: @inquiry.errors }) %>");
-$('#search-igdb-bar').one('input', function() {
-    $("#search-errors").replaceWith("<%= j(render partial: 'search_errors', locals: { errors: [] }) %>");
-});
-
 clearSearchWait();
-
-<% if @inquiry.errors.empty? %>
+<% errors = @inquiry.errors %>
+<% if errors.empty? %>
     var view = '<%= view %>';
     var $results = $("#search-results");
-
     $results.html("<%= j(render partial: 'results', locals: { view: view, load_more: false }) %>");
     $results.append("<%= j(content_tag :span, @inquiry.last_form.values.join(','), id: 'last-form') %>");
     $("#bar-history").html("<%= j(render partial:'records/bar_records') %>");
@@ -37,4 +31,11 @@ clearSearchWait();
         changeTheme(false);
         hideShowBackToTop();
     });
+<% else %>
+    $ok_icon = $("#search-ok");
+    $error_icon = $ok_icon.next();
+    $error_icon.attr('uk-tooltip', 'title: Please <%= errors.full_messages.first %>; pos: left');
+    $ok_icon.hide();
+    $error_icon.show();
+    resetSimpleError('#search-igdb-bar',$ok_icon, $error_icon);
 <% end %>
