Refactor some reset errors js functions. Make separate controller for Search IGDB. Add minor fixes.

--- a/app/views/collections/_delete_form.html.erb
+++ b/app/views/collections/_delete_form.html.erb
@@ -1,6 +1,6 @@
 <p class="all-lost">All games in this collection will be lost!</p>
 <div class="cancel-del">
-<button id="coll-uff" class="uk-button lp-button del-f">
+<button class="uk-button uk-modal-close lp-button del-f">
 <span uk-icon="close"></span> Cancel</button>
 <%= link_to collection_url(coll_id), method: :delete, remote: true, class: 'uk-button lp-button del-f' do %>
 <span uk-icon="trash"></span> Delete
