--- a/app/views/collections/del_form.js.erb
+++ b/app/views/collections/del_form.js.erb
@@ -1,3 +1,4 @@
-$("#coll-del-modal").find(".modal-content").html("<%= j(render partial: 'delete_form', locals: { coll_id: @coll_id }) %>");
+var $modal = $("#coll-del-modal");
+$modal.find(".modal-content").html("<%= j(render partial: 'delete_form', locals: { coll_id: @coll_id }) %>");
 $('#sad-coll').text('"<%= @coll_name %>"');
-cancelCollDelete();
+UIkit.modal($modal).show();
