--- a/app/views/password_resets/create.js.erb
+++ b/app/views/password_resets/create.js.erb
@@ -1,6 +1,2 @@
-var $modal = $('#signin-modal');
-var $content = $modal.find('.modal-content');
+var $content = $('#signin-modal').find('.modal-content');
 $content.html('<%= j(render partial: 'reset_sent', locals: { email: @user.email })%>');
-$('#done-btn').one("click", function() {
-  UIkit.modal($modal).hide();
-});
