--- a/app/views/users/_check_email.html.erb
+++ b/app/views/users/_check_email.html.erb
@@ -2,4 +2,4 @@
 <hr class="auth-hr">
 <p class="auth">Please go to your <%= content_tag :b, email %> email to retrieve activation link.</p>
 <p class="auth">It could take a few minutes to appear.</p>
-<%= content_tag :a, 'Done', id: 'done-btn', class: 'uk-button sh-button' %>
+<%= content_tag :a, 'Done', id: 'done-btn', class: 'uk-button sh-button uk-modal-close' %>
