--- a/app/views/account_activations/resend_activation_link.js.erb
+++ b/app/views/account_activations/resend_activation_link.js.erb
@@ -1,6 +1,2 @@
-var $modal = $('#signin-modal');
-var $content = $modal.find('.modal-content');
+var $content = $('#signin-modal').find('.modal-content');
 $content.html('<%= j(render partial: 'check_email', locals: { email: @email })%>');
-$('#done-btn').one("click", function() {
-  UIkit.modal($modal).hide();
-});
