--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,17 +1,23 @@
 <% if @errors[:email].any? %>
   var mail_tooltip = "title: Email <%= raw @errors[:email].join(', ') %>; pos: top-left";
-  $("#mail-icon").hide();
-  var $mail_er = $("#mail-er-icon");
-  $mail_er.attr('uk-tooltip', mail_tooltip);
-  $mail_er.show();
+  var $mail_input = $("#signup-mail");
+  var $mail_ok = $mail_input.next();
+  var $mail_error = $mail_ok.next();
+
+  $mail_ok.hide();
+  $mail_error.attr('uk-tooltip', mail_tooltip).show();
+  resetSimpleError($mail_input, $mail_ok, $mail_error);
 <% end %>
 
 <% if @errors[:password].any? %>
   var key_tooltip = "title: Password <%= raw @errors[:password].join(', ') %>; pos: top-left";
-  $("#key-icon").hide();
-  var $key_er = $("#key-er-icon");
-  $key_er.attr('uk-tooltip', key_tooltip);
-  $key_er.show();
+  var $key_input = $("#signup-password");
+  var $key_ok = $("#key-icon");
+  var $key_error = $key_ok.next();
+
+  $key_ok.hide();
+  $key_error.attr('uk-tooltip', key_tooltip).show();
+  resetSimpleError($key_input, $key_ok, $key_error);
 <% end %>
 
-resetSignupErrors();
+
